Trying stuff and fixing others

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,8 @@ pip = "*"
 flask = "*"
 flask-sqlalchemy = "*"
 sqlalchemy = "*"
+marshmallow = "==3.10.0"
 psycopg2 = "*"
-marshmallow = "*"
 sqlalchemy-utils = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
