--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_PRE = "postgresql://"
-DATABASE_USER = "james"
+DATABASE_USER = "jason"
 DATABASE_ADDR = "127.0.0.1"
 DATABASE_PORT = "5432"
 DATABASE_NAME = "cyclone"
