--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ sqlalchemy-utils = "*"
 flask-marshmallow = "==0.14.0"
 marshmallow-sqlalchemy = "==0.24.2"
 MarkupSafe = "==1.1.1"
+flask-bcrypt = "*"
 
 [dev-packages]
 
